# ZeeBot

./: .env.dev  .env.prod  .gitignore  6601575845.json  Pipfile  README.md  bilibili.db  bot.py  config.py.example  linkson-0.1.0-py3-none-any.whl  pyproject.toml  requirements.txt
src/plugins/: auto_weibo.py  broadcast.py  diary.py  query_weibo.py  reaction.py  translation.py  url_parse.py
