[tool.poetry]
name = "ZeeBot"
version = "0.1.0"
description = "ZeeBot"
authors = ["zhufree"]
readme = "README.md"

[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]
nonebot-test = "^0.1.0"


[tool.nonebot]
plugins = ["nonebot_plugin_simplemusic", "nonebot_plugin_epicfree", "nonebot_bison"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
